[package]
name = "rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gotham = "0.7.1"

futures-util = "0.3.14"
tokio = { version = "1.11.0", features = ["full"] }

[target.'cfg(unix)'.dev-dependencies]
nix = "0.26"